# nextquery

./: CMakeLists.txt  README.md
config/: AppConfig.h  AppConfig.h.in
src/: AbstractBase.h  BingHtmlParser.cpp  BingHtmlParser.h  CMakeLists.txt  GoogleHtmlParser.cpp  GoogleHtmlParser.h  HtmlParser.cpp  HtmlParser.h  HttpClient.cpp  HttpClient.h  NextQuery.cpp  NextQuery.h  QueryController.cpp  QueryController.h  QueryResult.cpp  QueryResult.h  QueryRunner.cpp  QueryRunner.h  SearchRequest.cpp  SearchRequest.h  UrlBuilder.cpp  UrlBuilder.h
test/: CMakeLists.txt  FileUtil.h  HtmlParserTest.cpp  HttpClientTest.cpp  NextQueryTest.cpp  NextQueryTests.cpp  UrlBuilderTest.cpp  UrlBuilderTests.cpp
test/resources/: bing_query_response.html  google_query_response.html  query_response.html
